chore: support java 17 version