@@ -87,6 +87,11 @@ if [[ $? -ne 0 || $JAVA_VERSION < $EXPECT_JDK_VERSION ]]; then
     exit 1
 fi
 
+DEFAULT_JAVA_OPTIONS=""
+if [[ $JAVA_VERSION > 8 ]]; then
+    DEFAULT_JAVA_OPTIONS="--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"
+fi
+
 # Set Java options
 if [ "$JAVA_OPTIONS" = "" ]; then
     XMX=$(calc_xmx $MIN_MEM $MAX_MEM)
@@ -121,6 +126,6 @@ if [[ ${OPEN_SECURITY_CHECK} == "true" ]]; then
 fi
 
 # Turn on security check
-exec ${JAVA} -Dname="HugeGraphServer" ${JVM_OPTIONS} ${JAVA_OPTIONS} \
+exec ${JAVA} -Dname="HugeGraphServer" ${DEFAULT_JAVA_OPTIONS} ${JVM_OPTIONS} ${JAVA_OPTIONS} \
      -cp ${CLASSPATH}: com.baidu.hugegraph.dist.HugeGraphServer ${GREMLIN_SERVER_CONF} ${REST_SERVER_CONF} \
      >> ${OUTPUT} 2>&1
